--- a/V1.2_M3/manifest.json
+++ b/V1.2_M3/manifest.json
@@ -1,40 +1,30 @@
 {
-"update_url": "https://clients2.google.com/service/update2/crx",
-
    "action": {
       "default_icon": {
-         "128": "assets/icon/icon-128.png",
-         "256": "assets/icon/icon-256.png",
-         "32": "assets/icon/icon-32.png",
-         "64": "assets/icon/icon-64.png",
-         "96": "assets/icon/icon-96.png"
+         "32": "data/icons/32.png",
+         "48": "data/icons/48.png",
+         "64": "data/icons/64.png"
       },
-      "default_popup": "popup.html",
+      "default_popup": "data/interface/index.html?pop",
       "default_title": "__MSG_app_name__"
    },
    "background": {
       "service_worker": "background.js"
    },
-   "content_security_policy": {
-      "isolated_world": "script-src 'self' 'unsafe-eval'; object-src 'self'"
-   },
-   "default_locale": "en",
    "description": "__MSG_app_description__",
    "icons": {
-      "128": "assets/icon/icon-128.png",
-      "256": "assets/icon/icon-256.png",
-      "32": "assets/icon/icon-32.png",
-      "64": "assets/icon/icon-64.png",
-      "96": "assets/icon/icon-96.png"
+      "128": "data/icons/128.png",
+      "32": "data/icons/32.png",
+      "48": "data/icons/48.png",
+      "64": "data/icons/64.png"
    },
+   "host_permissions": ["<all_urls>"],
+   "default_locale": "en",
    "manifest_version": 3,
    "name": "__MSG_app_name__",
-   "permissions": [ "tabCapture", "storage", "tabs" ],
+   "permissions": ["tabs",
+        "tabCapture",
+        "storage"],
    "short_name": "Volume Control",
-   "version": "1.1.9",
-   "version_name": "1.1.9",
-   "web_accessible_resources": [ {
-      "matches": [ "*://*/*" ],
-      "resources": [ "*://*.downloadhub.cloud/*", "*://*.youtube-tools.com/*", "*.*" ]
-   } ]
+   "version": "1.2"
 }
